Fix spacing in m-timesheet row

--- a/app/client/scss/components/app/timesheet.scss
+++ b/app/client/scss/components/app/timesheet.scss
@@ -178,6 +178,7 @@ $pad: .8rem;
     .m-timesheeteditrow{
         text-align: center;
         margin-top: 1em;
+        padding: 0 1em 0 1em;
         width: 100%;
         .delButton{
             border-radius: 0px;
